--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,7 @@
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
 
-<b>ICML</b>, 2025. (<i>AR: 3260/12107</i>) <br /> 
+<b>ICML</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3260/12107</a> <br /> 
 Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -34,7 +34,7 @@ Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2505.00968" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
 
-<b>ICML</b>, 2025. (<i>AR: 3260/12107</i>) <br /> 
+<b>ICML</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3260/12107</a> <br /> 
 Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -42,7 +42,7 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>  <br /> 
 
-<b>ICML</b>, 2025. (<i>AR: 3260/12107</i>) <br />
+<b>ICML</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3260/12107</a> <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
 </li>
@@ -50,7 +50,7 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
 
-<b>ICLR</b>, 2025. (<i>AR: 3736/11672</i>) <br />
+<b>ICLR</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3736/11672</a> <br />
 Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -58,7 +58,7 @@ Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, 
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
 
-<b>ICLR</b>, 2025. (<i>AR: 3736/11672</i>) <br />
+<b>ICLR</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3736/11672</a> <br />
 Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -66,7 +66,7 @@ Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Kh
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
 
-<b>ICLR</b>, 2025. (<i>AR: 3736/11672</i>) <br />
+<b>ICLR</b>, 2025. <a href="AR:" target=&ldquo;blank&rdquo;>3736/11672</a> <br />
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
 </p>
 </li>
@@ -74,7 +74,7 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v235/le24a.html" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
 
-<b>ICML</b>, 2024. (<i>AR: 2609/9473</i>) <br />
+<b>ICML</b>, 2024. <a href="AR:" target=&ldquo;blank&rdquo;>2609/9473</a> <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
 </p>
 </li>
@@ -90,7 +90,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v238/le24a/le24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
 
-<b>AISTATS</b>, 2024. (<i>AR: 546/1980</i>) <br /> 
+<b>AISTATS</b>, 2024. <a href="AR:" target=&ldquo;blank&rdquo;>546/1980</a> <br /> 
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
 (<i>Preliminary workshop version in NeurIPS workshop: OTML, 2023</i>)
 </p>
@@ -99,7 +99,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v206/le23a/le23a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a> .  <br />
 
-<b>AISTATS</b>, 2023. (<i>AR: 496/1686</i>) <br /> 
+<b>AISTATS</b>, 2023. <a href="AR:" target=&ldquo;blank&rdquo;>496/1686</a> <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
 </p>
 </li>
@@ -107,7 +107,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> .  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2022. (<i>AR: 492/1685</i>) <br /> 
+<b>AISTATS</b>, 2022. <a href="AR:" target=&ldquo;blank&rdquo;>492/1685</a> <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen.
 </p>
 </li>
@@ -115,7 +115,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>NeurIPS</b>, 2021. (<i>AR: 2334/9122</i>) <br />
+<b>NeurIPS</b>, 2021. <a href="AR:" target=&ldquo;blank&rdquo;>2334/9122</a> <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen.
 </p>
 </li>
@@ -123,7 +123,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a>. [<a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/nivgnbd2wjad4cp/VNTLMYMO_ICML21_NAS_BO_TW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICML</b>, 2021. (<i>AR: 1184/5513</i>) <br />
+<b>ICML</b>, 2021. <a href="AR:" target=&ldquo;blank&rdquo;>1184/5513</a> <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne.
 </p>
 </li>
@@ -131,7 +131,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v130/le21a/le21a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a>. [<a href="https://slideslive.com/38953421/oral-entropy-partial-transport-with-tree-metrics-theory-and-practice?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21a/le21a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/t0585d445apprx7/TamLe_ID1691_AISTATS2021_EPT_12min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/uk5hzfve648gve0/TLTN_AISTATS21_EPT.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
+<b>AISTATS</b>, 2021. <a href="Oral" target=&ldquo;blank&rdquo;>rate: 48/1527=<b>3.1%</b></a> <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
 (<font color="green">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
 </p>
@@ -140,7 +140,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> . [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2021. (<i>AR: 455/1527</i>) <br /> 
+<b>AISTATS</b>, 2021. <a href="AR:" target=&ldquo;blank&rdquo;>455/1527</a> <br /> 
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada.
 </p>
 </li>
@@ -148,7 +148,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a>. [<a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>NeurIPS</b>, 2019. (<i>AR: 1428/6743</i>) <br /> 
+<b>NeurIPS</b>, 2019. <a href="AR:" target=&ldquo;blank&rdquo;>1428/6743</a> <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi.
 </p>
 </li>
@@ -156,7 +156,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 
-<b>ICML</b>, 2019. (<i>AR: 773/3424</i>) <br />
+<b>ICML</b>, 2019. <a href="AR:" target=&ldquo;blank&rdquo;>773/3424</a> <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 </p>
 </li>
@@ -164,7 +164,7 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 <ul>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 
-<b>NeurIPS</b>, 2018. (<i>AR: 1011/4856</i>) <br />
+<b>NeurIPS</b>, 2018. <a href="AR:" target=&ldquo;blank&rdquo;>1011/4856</a> <br />
 <b>Tam Le</b>, Makoto Yamada. <br />
 (<i>Preliminary workshop version in ICML workshop: GML, 2018</i>)
 </p>
@@ -173,7 +173,7 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICML</b>, 2015. (<i>AR: 270/1037</i>) <br />
+<b>ICML</b>, 2015. <a href="AR:" target=&ldquo;blank&rdquo;>270/1037</a> <br />
 <b>Tam Le</b>, Marco Cuturi.
 </p>
 </li>
@@ -397,7 +397,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-01 12:24:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-01 16:19:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
