--- a/publication.html
+++ b/publication.html
@@ -88,7 +88,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v238/le24a/le24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a> <br />
+<li><p><a href="https://proceedings.mlr.press/v238/le24a/le24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>. [<a href="https://www.dropbox.com/scl/fi/lmp323v4476rru5ytrb60/LNF_AISTATS24_Posters_Robust-TW.pdf?rlkey=0ui707gk9tdfobvlmhurz2xp9&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>AISTATS</b>, 2024. [AR: 546/1980] <br /> 
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
@@ -97,7 +97,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v206/le23a/le23a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a> .  <br />
+<li><p><a href="https://proceedings.mlr.press/v206/le23a/le23a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/sadl87k7i8mi8bzirp5xy/LNF_AISTATS2023_UnbalancedSobolevTransport_Poster.pdf?rlkey=ju7kic3tulclg6jhcy37dst51&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>AISTATS</b>, 2023. [AR: 496/1686] <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
@@ -105,7 +105,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> .  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+<li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a>.  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>AISTATS</b>, 2022. [AR: 492/1685] <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen.
@@ -138,7 +138,7 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 </li>
 </ul>
 <ul>
-<li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> . [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+<li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a>. [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>AISTATS</b>, 2021. [AR: 455/1527] <br /> 
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada.
@@ -397,7 +397,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-01 16:22:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 12:25:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
