--- a/code.html
+++ b/code.html
@@ -21,6 +21,20 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/NonlinearTSW" target=&ldquo;blank&rdquo;>Tree-Sliced-Wasserstein with Nonlinear Radon Transform</a>. (ICML 2025)
+</p>
+<ul>
+<li><p>TSW with nonlinear Radon transform, i.e., circular Radon transform on System-of-Lines, and spatial Radon transform on System-of-Lines. Consequently, we proposed CircularTSW and SpatialTSW respectively. Additionally, we also propose Spatial Spherical TSW (SpatialSTSW) with spatial spherical Radon transform on spherical trees.
+</p>
+</li>
+<li><p>Implemented by Thanh Tran and Thanh Chu.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><a href="https://github.com/lttam/Sobolev-IPM" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM</a>. (ICML 2025)
 </p>
 <ul>
@@ -316,7 +330,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 12:25:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 14:44:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
