--- a/publication.html
+++ b/publication.html
@@ -24,7 +24,7 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
 
 <b>ICML</b>, 2025. [AR: 3260/12107] <br /> 
 Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -32,7 +32,7 @@ Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, T
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2505.00968" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
 
 <b>ICML</b>, 2025. [AR: 3260/12107] <br /> 
 Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -40,7 +40,7 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=VhEpf2HFr0" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/459zgg3mjd04i66l7gm7w/LNHF_ICML25__SobolevIPM_Poster.pdf?rlkey=xxas5uqfwmubfdqs467cwbmp8&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/59mamk5acigyphqhwoyxa/TamLe_2025_ICML_SobolevIPM_slide.pdf?rlkey=di4tlmd67vxrjzi2aiyo01cct&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 
 <b>ICML</b>, 2025. [AR: 3260/12107] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
@@ -48,7 +48,7 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>. [<a href="https://www.dropbox.com/scl/fi/qovxxmyphcodrpm2ev73d/ICLR2025_Poster_Distance_based_TSW.pdf?rlkey=5g0szfeygk4otv34z5wvsf121&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>ICLR</b>, 2025. [AR: 3736/11672] <br />
 Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -56,7 +56,7 @@ Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>. [<a href="https://www.dropbox.com/scl/fi/8tocwmnunof749rettglg/ICLR2025_Poster_Spherical_TSW.pdf?rlkey=ovxyux3om2n3gtis376o8dium&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>ICLR</b>, 2025. [AR: 3736/11672] <br />
 Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -64,7 +64,7 @@ Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Kh
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>. [<a href="https://www.dropbox.com/scl/fi/4amll8wpphcue70jm60w4/ICLR2025_Poster_SAVA.pdf?rlkey=jlm9f7ga5gtxnpc6j18th2bzz&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 <b>ICLR</b>, 2025. [AR: 3736/11672] <br />
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
@@ -72,7 +72,7 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v235/le24a.html" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=0GC0NG6Orr" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/245odnynieie7li04y3ru/LNF_ICML24__Generalized_Sobolev_Transport_Poster.pdf?rlkey=zxnkkoj8fx34qavbk3h5fpyph&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/9xmol84vbpliv93wqd00h/TamLe_2024_ICML_GST_slide.pdf?rlkey=am7ybf44c3bsh2g6kocc182gl&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 
 <b>ICML</b>, 2024. [AR: 2609/9473] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
@@ -80,7 +80,7 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v235/nguyen24l.html" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=XyxuhLtFA2" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>. [<a href="https://www.dropbox.com/scl/fi/xx0665k9xco34vlvz9l7s/ICML24__Sliced_Wasserstein_with_Random_Path_Projecting_Directions.pdf?rlkey=h8dprjf294vf2ozmwru7sxrqs&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 <b>ICML</b>, 2024. [AR: 2609/9473] <br />
 Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
@@ -113,7 +113,7 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+<li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://slideslive.com/38968739/adversarial-regression-with-doubly-nonnegative-weighting-matrices?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
 <b>NeurIPS</b>, 2021. [AR: 2334/9122] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen.
@@ -211,14 +211,14 @@ ArXiv, 2025. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1077314225000736" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
+<li><p><a href="https://www.dropbox.com/scl/fi/dsforw4iizhwr8lw0v2vl/CVIU2025-Few-Shot-Object-Detection-via-Synthetic-Features-with-Optimal-Transport.pdf?rlkey=uo2ljzicldzg71w7nuv1b5l3r&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 Computer Vision and Image Understanding (<b>CVIU</b>) journal, 2025. <br />
 Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://proceedings.mlr.press/v236/pham24a/pham24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Counterfactual Distribution Estimation in Multivariate Causal Models</font></a> <br />
+<li><p><a href="https://proceedings.mlr.press/v236/pham24a/pham24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Counterfactual Distribution Estimation in Multivariate Causal Models</font></a>. [<a href="https://www.dropbox.com/scl/fi/kho7suv9xn119o82y3w6w/CLeaR2024.pdf?rlkey=0irntp6yxxzkh49xlpxrnqgic&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Conference on Causal Learning and Reasoning (<i>CLeaR</i>), 2024. <br />
 Thong Pham, Shohei Shimizu, Hideitsu Hino, <b>Tam Le</b>.
 </p>
@@ -232,7 +232,7 @@ Xinru Hua, Truyen Nguyen, <b>Tam Le</b>, Jose Blanchet, Viet Anh Nguyen
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Nguyen_Point-Set_Distances_for_Learning_Representations_of_3D_Point_Clouds_ICCV_2021_paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
+<li><p><a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Nguyen_Point-Set_Distances_for_Learning_Representations_of_3D_Point_Clouds_ICCV_2021_paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a>. [<a href="https://openaccess.thecvf.com/content/ICCV2021/supplemental/Nguyen_Point-Set_Distances_for_ICCV_2021_supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>] <br />
 International Conference on Computer Vision (<b>ICCV</b>), 2021. (<i>AR: 1617/6236</i>) <br />
 Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Tung Pham, Nhat Ho, Binh-Son Hua.
 </p>
@@ -260,21 +260,21 @@ ArXiv, 2019. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
+<li><p><a href="https://www.tandfonline.com/doi/epdf/10.1080/14686996.2018.1439253?needAccess=true" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
 Science and Technology of Advance Materials Journal (STAM), 2018. <br />
 Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
+<li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://www.dropbox.com/scl/fi/bj6s34c1c4zhvnx6z1uke/TamLe_ACML13_Slide.pdf?rlkey=nh938fwy6hl7mlxg1mqfe478x&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
 Asian Conference on Machine Learning (<i>ACML</i>), 2013 (oral). (<i>Oral rate: 9.7%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
+<li><p><a href="https://www.dropbox.com/scl/fi/zwjnhrisgzl99sk41qsml/TKS-HSMK-IIEEJ13.pdf?rlkey=g51twz1cg127b987nn0ggjfo9&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
 Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto <br />
 (<i>Preliminary conference version in ICIAR, 2011</i>)
@@ -282,7 +282,7 @@ Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 4
 </li>
 </ul>
 <ul>
-<li><p><a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font></a>. [<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
+<li><p><a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font></a>. [<a href="https://www.dropbox.com/scl/fi/m99vfa6cnwue160t25qro/TamLe-HSMK-ICIAR11.pdf?rlkey=ihvivie8phmd4419isg4lvbjp&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
 International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). (<i>Oral rate: 25%</i>)<br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen
 </p>
@@ -397,7 +397,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 12:25:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 14:44:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
