--- a/code.html
+++ b/code.html
@@ -21,10 +21,10 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
-<li><p><a href="https://github.com/lttam/NonlinearTSW" target=&ldquo;blank&rdquo;>Tree-Sliced-Wasserstein with Nonlinear Radon Transform</a>. (ICML 2025)
+<li><p><a href="https://github.com/lttam/NonlinearTSW" target=&ldquo;blank&rdquo;>Tree-Sliced-Wasserstein with Nonlinear Radon Transforms</a>. (ICML 2025)
 </p>
 <ul>
-<li><p>TSW with nonlinear Radon transform, i.e., circular Radon transform on System-of-Lines, and spatial Radon transform on System-of-Lines. Consequently, we proposed CircularTSW and SpatialTSW respectively. Additionally, we also propose Spatial Spherical TSW (SpatialSTSW) with spatial spherical Radon transform on spherical trees.
+<li><p>TSW with nonlinear Radon transforms, i.e., circular Radon transform on System-of-Lines, spatial Radon transform on System-of-Lines, and spatial spherical Radon transform on spherical-trees. Consequently, we propose CircularTSW, SpatialTSW, and SpatialSTSW respectively.
 </p>
 </li>
 <li><p>Implemented by Thanh Tran and Thanh Chu.
@@ -330,7 +330,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 14:44:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 14:49:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
