--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,8 @@
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
 
-<b>ICML</b>, 2025. [AR: 3260/12107] <br /> 
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
 Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -34,7 +35,8 @@ Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
 
-<b>ICML</b>, 2025. [AR: 3260/12107] <br /> 
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
 Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -42,7 +44,8 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=VhEpf2HFr0" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/459zgg3mjd04i66l7gm7w/LNHF_ICML25__SobolevIPM_Poster.pdf?rlkey=xxas5uqfwmubfdqs467cwbmp8&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/59mamk5acigyphqhwoyxa/TamLe_2025_ICML_SobolevIPM_slide.pdf?rlkey=di4tlmd67vxrjzi2aiyo01cct&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 
-<b>ICML</b>, 2025. [AR: 3260/12107] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
 </p>
 </li>
@@ -50,7 +53,8 @@ Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, T
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>. [<a href="https://www.dropbox.com/scl/fi/qovxxmyphcodrpm2ev73d/ICLR2025_Poster_Distance_based_TSW.pdf?rlkey=5g0szfeygk4otv34z5wvsf121&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICLR</b>, 2025. [AR: 3736/11672] <br />
+
+<b><font style="color:rgb(220, 118, 51)">ICLR</font></b>, 2025. <br />
 Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -58,7 +62,8 @@ Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, 
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;><font color="blue">Spherical Tree-Sliced Wasserstein Distance</font></a>. [<a href="https://www.dropbox.com/scl/fi/8tocwmnunof749rettglg/ICLR2025_Poster_Spherical_TSW.pdf?rlkey=ovxyux3om2n3gtis376o8dium&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICLR</b>, 2025. [AR: 3736/11672] <br />
+
+<b><font style="color:rgb(220, 118, 51)">ICLR</font></b>, 2025. <br />
 Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Khoi Nguyen, Trang Pham,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
@@ -66,7 +71,8 @@ Hoang V. Tran<font color="red">*</font>, Thanh Chu<font color="red">*</font>, Kh
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;><font color="blue">SAVA: Scalable Learning-Agnostic Data Valuation</font></a>. [<a href="https://www.dropbox.com/scl/fi/4amll8wpphcue70jm60w4/ICLR2025_Poster_SAVA.pdf?rlkey=jlm9f7ga5gtxnpc6j18th2bzz&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
-<b>ICLR</b>, 2025. [AR: 3736/11672] <br />
+
+<b><font style="color:rgb(220, 118, 51)">ICLR</font></b>, 2025. <br />
 Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Vu Nguyen.
 </p>
 </li>
@@ -74,7 +80,8 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=0GC0NG6Orr" target=&ldquo;blank&rdquo;><font color="blue">Generalized Sobolev Transport for Probability Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/245odnynieie7li04y3ru/LNF_ICML24__Generalized_Sobolev_Transport_Poster.pdf?rlkey=zxnkkoj8fx34qavbk3h5fpyph&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/scl/fi/9xmol84vbpliv93wqd00h/TamLe_2024_ICML_GST_slide.pdf?rlkey=am7ybf44c3bsh2g6kocc182gl&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br /> 
 
-<b>ICML</b>, 2024. [AR: 2609/9473] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2024. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
 </p>
 </li>
@@ -82,7 +89,8 @@ Samuel Kessler<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font
 <ul>
 <li><p><a href="https://openreview.net/pdf?id=XyxuhLtFA2" target=&ldquo;blank&rdquo;><font color="blue">Sliced Wasserstein with Random-Path Projecting Directions</font></a>. [<a href="https://www.dropbox.com/scl/fi/xx0665k9xco34vlvz9l7s/ICML24__Sliced_Wasserstein_with_Random_Path_Projecting_Directions.pdf?rlkey=h8dprjf294vf2ozmwru7sxrqs&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
-<b>ICML</b>, 2024. [AR: 2609/9473] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2024. <br />
 Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 </p>
 </li>
@@ -90,7 +98,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v238/le24a/le24a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>. [<a href="https://www.dropbox.com/scl/fi/lmp323v4476rru5ytrb60/LNF_AISTATS24_Posters_Robust-TW.pdf?rlkey=0ui707gk9tdfobvlmhurz2xp9&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2024. [AR: 546/1980] <br /> 
+
+<b><font style="color:rgb(205, 97, 85)">AISTATS</font></b>, 2024. <br />
 <b>Tam Le</b>, Truyen Nguyen, Kenji Fukumizu. <br />
 (<i>Preliminary workshop version in NeurIPS workshop: OTML, 2023</i>)
 </p>
@@ -99,7 +108,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v206/le23a/le23a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a>. [<a href="https://www.dropbox.com/scl/fi/sadl87k7i8mi8bzirp5xy/LNF_AISTATS2023_UnbalancedSobolevTransport_Poster.pdf?rlkey=ju7kic3tulclg6jhcy37dst51&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2023. [AR: 496/1686] <br /> 
+
+<b><font style="color:rgb(205, 97, 85)">AISTATS</font></b>, 2023. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.
 </p>
 </li>
@@ -107,7 +117,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a>.  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2022. [AR: 492/1685] <br /> 
+
+<b><font style="color:rgb(205, 97, 85)">AISTATS</font></b>, 2022. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen.
 </p>
 </li>
@@ -115,7 +126,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Paper.pdf" target=&ldquo;blank&rdquo;><font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font></a>. [<a href="https://slideslive.com/38968739/adversarial-regression-with-doubly-nonnegative-weighting-matrices?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.neurips.cc/paper/2021/file/8cfef17bee2b7a75a3ce09d40b497f6b-Supplemental.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/aenyabi9mq5vk37/TamLe_NeurIPS2021_AdvReg_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/gbwdqbu5pobpymo/LNBN_NeurIPS21_AdvReg.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>NeurIPS</b>, 2021. [AR: 2334/9122] <br />
+
+<b><font style="color:rgb(108, 52, 131)">NeurIPS</font></b>, 2021. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Makoto Yamada, Jose Blanchet, Viet Anh Nguyen.
 </p>
 </li>
@@ -123,7 +135,8 @@ Khai Nguyen, Shujian Zhang, <b>Tam Le</b>, Nhat Ho.
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a>. [<a href="http://proceedings.mlr.press/v139/nguyen21d/nguyen21d-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/nivgnbd2wjad4cp/VNTLMYMO_ICML21_NAS_BO_TW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICML</b>, 2021. [AR: 1184/5513] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2021. <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne.
 </p>
 </li>
@@ -131,16 +144,18 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v130/le21a/le21a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a>. [<a href="https://slideslive.com/38953421/oral-entropy-partial-transport-with-tree-metrics-theory-and-practice?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21a/le21a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/t0585d445apprx7/TamLe_ID1691_AISTATS2021_EPT_12min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/uk5hzfve648gve0/TLTN_AISTATS21_EPT.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2021. [Oral rate: 48/1527=<b>3.1%</b>] <br /> 
+
+<b><font style="color:rgb(205, 97, 85)">AISTATS</font></b>, 2021. [Oral rate: 48/1527=<b>3.1%</b>] <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
-(<font color="green">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
+(<font style="color:rgb(23, 165, 137)">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v130/le21b/le21b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a>. [<a href="https://slideslive.com/38953310/flowbased-alignment-approaches-for-probability-measures-in-different-spaces?ref=speaker-17801-latest" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v130/le21b/le21b-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vc09k731yh20nhv/TLNHMY_AISTATS2021_FlowAlign.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>AISTATS</b>, 2021. [AR: 455/1527] <br /> 
+
+<b><font style="color:rgb(205, 97, 85)">AISTATS</font></b>, 2021. <br />
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada.
 </p>
 </li>
@@ -148,7 +163,8 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a>. [<a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>NeurIPS</b>, 2019. [AR: 1428/6743] <br /> 
+
+<b><font style="color:rgb(108, 52, 131)">NeurIPS</font></b>, 2019. <br />
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi.
 </p>
 </li>
@@ -156,7 +172,8 @@ Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Ma
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 
-<b>ICML</b>, 2019. [AR: 773/3424] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2019. <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 </p>
 </li>
@@ -164,7 +181,8 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 <ul>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 
-<b>NeurIPS</b>, 2018. [AR: 1011/4856] <br />
+
+<b><font style="color:rgb(108, 52, 131)">NeurIPS</font></b>, 2018. <br />
 <b>Tam Le</b>, Makoto Yamada. <br />
 (<i>Preliminary workshop version in ICML workshop: GML, 2018</i>)
 </p>
@@ -173,14 +191,16 @@ Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi.
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 
-<b>ICML</b>, 2015. [AR: 270/1037] <br />
+
+<b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2015. <br />
 <b>Tam Le</b>, Marco Cuturi.
 </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
-Machine Learning Journal (<b>MLJ</b>), 2014. <br />
+
+Machine Learning Journal (<b><font style="color:rgb(23, 165, 137)">MLJ</font></b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi. <br />
 (<i>Preliminary conference version in ACML, 2013</i>)
 </p>
@@ -397,7 +417,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 14:49:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 17:05:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
