--- a/publication.html
+++ b/publication.html
@@ -24,7 +24,7 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=StaRAs9n49" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>. [<a href="https://www.dropbox.com/scl/fi/bs7qa04znefzwopb4atqd/ICML2025_Poster_TSW-SL_TreeSystem.pdf?rlkey=b8hs29frkutd4kxphe36cboct&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 
 <b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
@@ -33,7 +33,7 @@ Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, T
 </li>
 </ul>
 <ul>
-<li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
+<li><p><a href="https://openreview.net/pdf?id=SwXYV7CIw9" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>. [<a href="https://www.dropbox.com/scl/fi/zlqp9rcgsv09rs9tcbuvb/ICML2025_Poster_TSW_Nonlinear.pdf?rlkey=aywqqohcjb92su9thmixyztso&amp;dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br /> 
 
 
 <b><font style="color:rgb(34, 153, 84)">ICML</font></b>, 2025. <br />
@@ -433,7 +433,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 18:40:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-14 14:14:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
